Update reel logo styling for premium cohesive look across all sections

--- a/index.html
+++ b/index.html
@@ -349,11 +349,6 @@
             transform: translateY(100%);
             transition: all 0.3s ease;
             position: relative;
-            gap: 0.15em;
-        }
-
-        .nav-menu a .reel-text {
-            font-size: 1.05em;
         }
 
         .nav-overlay.active .nav-menu a {
@@ -954,11 +949,6 @@
             display: inline-flex;
             align-items: center;
             position: relative;
-            gap: 0.1em;
-        }
-
-        .footer-links a .reel-text {
-            font-size: 1.05em;
         }
 
         .footer-links a::after {
@@ -1021,43 +1011,35 @@
             display: inline-block;
             margin-right: -0.08em;
             position: relative;
-            top: -0.08em;
+            top: -0.02em;
         }
 
         /* Hero section specific adjustments */
         .hero h1 .reel-img {
             height: 1.35em !important;
-            top: -0.08em;
+            top: -0.02em;
             margin-right: -0.08em;
         }
 
         /* Preloader specific */
         .preloader-logo .reel-img {
             height: 1.35em !important;
-            top: -0.08em;
+            top: -0.02em;
             margin-right: -0.08em;
         }
 
         /* Pillar cards */
         h3 .reel-img {
             height: 1.2em !important;
-            top: -0.07em;
+            top: -0.02em;
             margin-right: -0.06em;
         }
 
         /* Footer brand logo */
         .footer-brand h3 .reel-img {
             height: 1.25em !important;
-            top: -0.08em;
+            top: -0.02em;
             margin-right: -0.08em;
-        }
-
-        /* Text-based Reel for nav and footer links */
-        .reel-text {
-            color: inherit;
-            font-style: italic;
-            font-family: 'Playfair Display', serif;
-            font-weight: 400;
         }
 
         /* Responsive */
@@ -1148,9 +1130,9 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="scoop.html"><span class="reel-text">Reel</span> Scoop</a></li>
-                    <li><a href="strategy.html"><span class="reel-text">Reel</span> Strategy</a></li>
-                    <li><a href="studio.html"><span class="reel-text">Reel</span>forge Studio</a></li>
+                    <li><a href="scoop.html">Reel Scoop</a></li>
+                    <li><a href="strategy.html">Reel Strategy</a></li>
+                    <li><a href="studio.html">Reelforge Studio</a></li>
                 </ul>
             </nav>
             <div class="nav-info">
@@ -1229,7 +1211,7 @@
                     <div class="pillar-icon">
                         <span>🎬</span>
                     </div>
-                    <h3><img src="reel-text.png" alt="Reel" class="reel-img"><span class="gold-text">forge</span> <span style="color: var(--forest-green);">Studio</span></h3>
+                    <h3><img src="reel-text.png" alt="Reel" class="reel-img"><span class="gold-text">forge Studio</span></h3>
                     <p>Creative experiments exploring the future of storytelling, interactivity, and intelligent media. Where new ideas come to life.</p>
                     <a href="studio.html" class="pillar-cta">
                         <span>Explore</span>
@@ -1255,9 +1237,9 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul class="footer-links">
-                    <li><a href="scoop.html"><span class="reel-text">Reel</span> Scoop</a></li>
-                    <li><a href="strategy.html"><span class="reel-text">Reel</span> Strategy</a></li>
-                    <li><a href="studio.html"><span class="reel-text">Reel</span>forge Studio</a></li>
+                    <li><a href="scoop.html">Reel Scoop</a></li>
+                    <li><a href="strategy.html">Reel Strategy</a></li>
+                    <li><a href="studio.html">Reelforge Studio</a></li>
                 </ul>
             </div>
             
