Update reel logo styling for premium cohesive look across all sections

--- a/index.html
+++ b/index.html
@@ -1014,31 +1014,31 @@
             vertical-align: middle;
             display: inline-block;
             position: relative;
-            top: 0;
+            top: 0.02em;
         }
 
         /* Hero section specific adjustments */
         .hero h1 .reel-img {
             height: 1.35em !important;
-            top: 0;
+            top: 0.02em;
         }
 
         /* Preloader specific */
         .preloader-logo .reel-img {
             height: 1.35em !important;
-            top: 0;
+            top: 0.02em;
         }
 
         /* Pillar cards */
         h3 .reel-img {
-            height: 1.2em !important;
-            top: 0.01em;
+            height: 1.25em !important;
+            top: 0.02em;
         }
 
         /* Footer brand logo */
         .footer-brand h3 .reel-img {
             height: 1.25em !important;
-            top: 0;
+            top: 0.02em;
         }
 
         /* Text-based Reel for nav and footer links */
@@ -1217,7 +1217,7 @@
                     <div class="pillar-icon">
                         <span>🎬</span>
                     </div>
-                    <h3 style="letter-spacing: -0.01em; word-spacing: -0.15em;"><img src="reel-text.png" alt="Reel" class="reel-img" style="margin-right: -0.08em;"><span class="gold-text">forge</span>&nbsp;<span style="color: var(--forest-green);">Studio</span></h3>
+                    <h3 style="letter-spacing: -0.01em; word-spacing: -0.15em;"><img src="reel-text.png" alt="Reel" class="reel-img" style="margin-right: -0.08em;"><span class="gold-text">forge</span>&nbsp;<span class="gold-text">Studio</span></h3>
                     <p>Creative experiments exploring the future of storytelling, interactivity, and intelligent media. Where new ideas come to life.</p>
                     <a href="studio.html" class="pillar-cta">
                         <span>Explore</span>
