--- a/scoop.html
+++ b/scoop.html
@@ -276,6 +276,13 @@
             width: 100%;
         }
 
+        /* Text-based Reel for nav */
+        .reel-text {
+            color: inherit;
+            font-weight: inherit;
+            padding-right: 0.12em;
+        }
+
         .close-nav {
             position: fixed;
             top: 2rem;
@@ -363,21 +370,25 @@
             color: var(--cream);
             font-weight: 700;
             position: relative;
-            display: inline-block;
+            display: inline-flex;
+            align-items: center;
+            gap: 0;
         }
 
-        .hero h1 .reel {
-            font-family: 'Playfair Display', serif;
-            font-style: italic;
-            color: var(--cream);
+        .hero h1 .reel-img {
+            height: 1.35em !important;
+            width: auto;
             display: inline-block;
             animation: slideInLeft 1s cubic-bezier(0.4, 0, 0.2, 1);
+            position: relative;
+            top: 0.02em;
         }
 
         .hero h1 .scoop {
             color: var(--gold);
             display: inline-block;
             animation: slideInRight 1s cubic-bezier(0.4, 0, 0.2, 1);
+            font-weight: 700;
         }
 
         @keyframes slideInLeft {
@@ -696,6 +707,22 @@
             transform: translateX(5px);
         }
 
+        /* Reel Image Styling - Premium positioning and sizing */
+        .reel-img {
+            height: 1.3em !important;
+            width: auto !important;
+            vertical-align: middle;
+            display: inline-block;
+            position: relative;
+            top: 0.02em;
+        }
+
+        /* Footer specific */
+        .footer-logo .reel-img {
+            height: 1.25em !important;
+            top: 0.02em;
+        }
+
         /* Footer */
         footer {
             background: linear-gradient(135deg, #1a1a1a 0%, #0a0a0a 100%);
@@ -707,16 +734,14 @@
         .footer-logo {
             font-size: 1.5rem;
             margin-bottom: 1rem;
-        }
-
-        .footer-logo .reel {
-            font-family: 'Playfair Display', serif;
-            font-style: italic;
-            color: var(--cream);
+            display: inline-flex;
+            align-items: center;
+            gap: 0;
         }
 
         .footer-logo .mediahq {
             color: var(--gold);
+            font-weight: 600;
         }
 
         .footer-tagline {
@@ -793,9 +818,9 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="scoop.html">Reel Scoop</a></li>
-                    <li><a href="strategy.html">Reel Strategy</a></li>
-                    <li><a href="studio.html">Reelverse Studio</a></li>
+                    <li><a href="scoop.html"><span class="reel-text">Reel</span> Scoop</a></li>
+                    <li><a href="strategy.html"><span class="reel-text">Reel</span> Strategy</a></li>
+                    <li><a href="studio.html"><span class="reel-text" style="padding-right: 0;">Reel</span>forge Studio</a></li>
                 </ul>
             </nav>
         </div>
@@ -808,7 +833,7 @@
     <section class="hero">
         <div class="hero-particles" id="particles"></div>
         <div class="hero-content">
-            <h1><span class="reel">Reel</span> <span class="scoop">Scoop</span></h1>
+            <h1><img src="reel-text-light.png" alt="Reel" class="reel-img" style="margin-right: 0.1em;"> <span class="scoop">Scoop</span></h1>
             <p class="hero-description">
                 Curated insights on how AI is transforming creativity, media, and business — from intelligent systems to emerging creative tools.
             </p>
@@ -895,7 +920,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-logo">
-            <span class="reel">Reel</span><span class="mediahq">MediaHQ</span>
+            <img src="reel-text-light.png" alt="Reel" class="reel-img" style="margin-right: -0.05em;"><span class="mediahq">MediaHQ</span>
         </div>
         <p class="footer-tagline">Exploring the edges of creative possibility</p>
         <div class="footer-links">
