--- a/scoop.html
+++ b/scoop.html
@@ -715,6 +715,11 @@
             display: inline-block;
             position: relative;
             top: 0.02em;
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: crisp-edges;
+            -webkit-font-smoothing: antialiased;
+            backface-visibility: hidden;
+            transform: translateZ(0);
         }
 
         /* Footer specific */
