Update footer: Replace X (Twitter) with LinkedIn company link

--- a/strategy.html
+++ b/strategy.html
@@ -1036,7 +1036,7 @@
         <p class="footer-tagline">Exploring the edges of creative possibility</p>
         <div class="footer-links">
             <a href="mailto:cl@reelmediahq.com">cl@reelmediahq.com</a> | 
-            <a href="#">X (Twitter)</a> | 
+            <a href="https://www.linkedin.com/company/reelmediahq">LinkedIn</a> | 
             <a href="#">YouTube</a>
         </div>
         <p style="margin-top: 2rem; opacity: 0.6; font-size: 0.9rem;">&copy; 2025 ReelMediaHQ. All rights reserved.</p>
